--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,24 +1,32 @@
 name: CI
 
 on:
+  # La CI se lance à chaque push sur develop
   push:
     branches: [ develop ]
+  # Et à chaque Pull Request vers develop
   pull_request:
     branches: [ develop ]
 
 jobs:
+  # =========================
+  # 1) JOB BACKEND
+  # =========================
   backend:
     name: Backend CI
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest   # GitHub lance une VM Ubuntu
 
+    # Toutes les commandes "run" se font dans le dossier backend/
     defaults:
       run:
         working-directory: backend
 
     steps:
+      # 1. Récupérer le code du repo
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # 2. Installer Node.js (version 20) dans la VM
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -26,28 +34,40 @@ jobs:
           cache: npm
           cache-dependency-path: backend/package-lock.json
 
+      # 3. Installer les dépendances du backend (à partir de package-lock.json)
       - name: Install dependencies
         run: npm ci
 
+      # 4. Lancer le lint SI le script existe dans package.json
+      #    continue-on-error: true => même si eslint trouve des erreurs,
+      #    le job continue (la CI ne devient pas rouge à cause du lint).
       - name: Lint (si le script existe - n'empêche pas la CI)
         run: npm run lint --if-present
         continue-on-error: true
 
+      # 5. Build du backend (transpile TypeScript, etc.) SI le script existe
+      #    Si le build casse => le job échoue (normal, c'est bloquant).
       - name: Build (si le script existe)
         run: npm run build --if-present
 
+  # =========================
+  # 2) JOB FRONTEND
+  # =========================
   frontend:
     name: Frontend CI
     runs-on: ubuntu-latest
 
+    # Toutes les commandes "run" se font dans le dossier frontend/
     defaults:
       run:
         working-directory: frontend
 
     steps:
+      # 1. Récupérer le code
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # 2. Installer Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -55,12 +75,54 @@ jobs:
           cache: npm
           cache-dependency-path: frontend/package-lock.json
 
+      # 3. Installer les dépendances du frontend
       - name: Install dependencies
         run: npm ci
 
+      # 4. Lancer le lint (non bloquant, comme pour le backend)
       - name: Lint (si le script existe - n'empêche pas la CI)
         run: npm run lint --if-present
         continue-on-error: true
 
+      # 5. Build du frontend (Vite, etc.)
       - name: Build (si le script existe)
         run: npm run build --if-present
+
+  # =========================
+  # 3) JOB DOCKER : build des images
+  # =========================
+  docker-build:
+    name: Build Docker images
+    runs-on: ubuntu-latest
+
+    # Ce job n'est lancé que si backend ET frontend ont réussi
+    needs: [backend, frontend]
+
+    steps:
+      # 1. Récupérer le code (on repart d'un checkout propre)
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      # 2. (Facultatif) Connexion à un registry Docker
+      #    Pour l'instant on ne push pas les images, donc on ne se logue pas.
+      #    Si tu veux pousser plus tard, tu pourras utiliser DOCKERHUB_USERNAME/PASSWORD
+      #    stockés dans les "Secrets" GitHub.
+      # - name: Login to Docker Hub
+      #   uses: docker/login-action@v3
+      #   with:
+      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
+      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      # 3. Build de l'image Docker du backend
+      #    -t collector-backend:${{ github.sha }} => nom de l'image + tag = identifiant du commit
+      - name: Build backend image
+        run: docker build -t collector-backend:${{ github.sha }} ./backend
+
+      # 4. Build de l'image Docker du frontend
+      - name: Build frontend image
+        run: docker build -t collector-frontend:${{ github.sha }} ./frontend
+
+      # 5. Afficher la liste des images présentes dans la VM CI
+      #    (ça te permet de voir les images dans les logs GitHub Actions)
+      - name: List built images
+        run: docker images | grep collector || true
