--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,3 +10,7 @@ DB_PASSWORD=postgres
 DB_NAME=collector_db
 
 KAFKA_BROKER=kafka:29092
+
+AUTH0_MGMT_CLIENT_ID=xxxxxxxxxxxxxxxxxxxxxxxxxx
+AUTH0_MGMT_CLIENT_SECRET=xxxxxxxxxxxxxxxxxxxxxxxxxx
+AUTH0_MGMT_AUDIENCE=https://your-tenant.us.auth0.com/api/v2/
