--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,8 @@
     "morgan": "^1.10.1",
     "pg": "^8.16.3",
     "zod": "^4.3.5"
+    ,
+    "axios": "^1.6.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
