--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,14 @@
 name: CI
 
 on:
-  # La CI se lance à chaque push sur develop
   push:
     branches: [ develop ]
-  # Et à chaque Pull Request vers develop
   pull_request:
     branches: [ develop ]
+
+concurrency:
+  group: ci-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   # =========================
@@ -14,19 +16,18 @@ jobs:
   # =========================
   backend:
     name: Backend CI
-    runs-on: ubuntu-latest   # GitHub  une VM Ubuntu
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
 
-    # Toutes les commandes "run" se font dans le dossier backend/
     defaults:
       run:
         working-directory: backend
 
     steps:
-      # 1. Récupérer le code du repo
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2. Installer Node.js (version 20) dans la VM
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -34,19 +35,13 @@ jobs:
           cache: npm
           cache-dependency-path: backend/package-lock.json
 
-      # 3. Installer les dépendances du backend (à partir de package-lock.json)
       - name: Install dependencies
         run: npm ci
 
-      # 4. Lancer le lint SI le script existe dans package.json
-      #    continue-on-error: true => même si eslint trouve des erreurs,
-      #    le job continue (la CI ne devient pas rouge à cause du lint).
       - name: Lint (si le script existe - n'empêche pas la CI)
         run: npm run lint --if-present
         continue-on-error: true
 
-      # 5. Build du backend (transpile TypeScript, etc.) SI le script existe
-      #    Si le build casse => le job échoue (normal, c'est bloquant).
       - name: Build (si le script existe)
         run: npm run build --if-present
 
@@ -56,18 +51,17 @@ jobs:
   frontend:
     name: Frontend CI
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
 
-    # Toutes les commandes "run" se font dans le dossier frontend/
     defaults:
       run:
         working-directory: frontend
 
     steps:
-      # 1. Récupérer le code
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2. Installer Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -75,79 +69,91 @@ jobs:
           cache: npm
           cache-dependency-path: frontend/package-lock.json
 
-      # 3. Installer les dépendances du frontend
       - name: Install dependencies
         run: npm ci
 
-      # 4. Lancer le lint (non bloquant, comme pour le backend)
       - name: Lint (si le script existe - n'empêche pas la CI)
         run: npm run lint --if-present
         continue-on-error: true
 
-      # 5. Build du frontend (Vite, etc.)
       - name: Build (si le script existe)
         run: npm run build --if-present
 
   # =========================
-  # 3) JOB DOCKER : build + push des images dans GHCR
+  # 3) JOB DOCKER : build + push GHCR
   # =========================
   docker-build:
-    name: Build & push Docker images
+    name: Build & push Docker images (GHCR)
     runs-on: ubuntu-latest
-
-    # Ce job n'est lancé que si backend ET frontend ont réussi
     needs: [backend, frontend]
 
-    # On donne le droit d'écrire dans GitHub Packages (GHCR)
+    # Push uniquement sur push (pas sur PR)
+    if: github.event_name == 'push'
+
     permissions:
       contents: read
       packages: write
 
     env:
-      # Noms des images dans GHCR (org = pc3-cizm)
       IMAGE_BACKEND: ghcr.io/pc3-cizm/collector-backend
       IMAGE_FRONTEND: ghcr.io/pc3-cizm/collector-frontend
+      IMAGE_DB: ghcr.io/pc3-cizm/collector-db
 
     steps:
-      # 1. Récupérer le code (on repart d'un checkout propre)
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2. Login à GitHub Container Registry (GHCR)
-      - name: Login to GitHub Container Registry
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # 3. Build + tag de l'image backend
-      - name: Build backend image
-        run: |
-          docker build -t $IMAGE_BACKEND:${{ github.sha }} ./backend
-          docker tag $IMAGE_BACKEND:${{ github.sha }} $IMAGE_BACKEND:develop
+      # -------- BACKEND --------
+      - name: Build & push backend
+        uses: docker/build-push-action@v6
+        with:
+          context: ./backend
+          push: true
+          tags: |
+            ${{ env.IMAGE_BACKEND }}:${{ github.sha }}
+            ${{ env.IMAGE_BACKEND }}:develop
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
-      # 4. Build + tag de l'image frontend
-      - name: Build frontend image
-        run: |
-          docker build -t $IMAGE_FRONTEND:${{ github.sha }} ./frontend
-          docker tag $IMAGE_FRONTEND:${{ github.sha }} $IMAGE_FRONTEND:develop
+      # -------- FRONTEND (VITE_* au build) --------
+      - name: Build & push frontend (with VITE build args)
+        uses: docker/build-push-action@v6
+        with:
+          context: ./frontend
+          push: true
+          tags: |
+            ${{ env.IMAGE_FRONTEND }}:${{ github.sha }}
+            ${{ env.IMAGE_FRONTEND }}:develop
+          build-args: |
+            VITE_API_URL=${{ vars.VITE_API_URL }}
+            VITE_AUTH0_DOMAIN=${{ secrets.VITE_AUTH0_DOMAIN }}
+            VITE_AUTH0_CLIENT_ID=${{ secrets.VITE_AUTH0_CLIENT_ID }}
+            VITE_AUTH0_AUDIENCE=${{ secrets.VITE_AUTH0_AUDIENCE }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
-      # 5. Push des images backend vers GHCR
-      - name: Push backend images
-        run: |
-          docker push $IMAGE_BACKEND:${{ github.sha }}
-          docker push $IMAGE_BACKEND:develop
-
-      # 6. Push des images frontend vers GHCR
-      - name: Push frontend images
-        run: |
-          docker push $IMAGE_FRONTEND:${{ github.sha }}
-          docker push $IMAGE_FRONTEND:develop
-
-      # 7. Afficher les images locales dans les logs
-      - name: List built images
-        run: docker images | grep collector || true
+      # -------- DB (postgres + init.sql) --------
+      - name: Build & push db (postgres seeded)
+        uses: docker/build-push-action@v6
+        with:
+          context: ./docker/postgres
+          file: ./docker/postgres/Dockerfile
+          push: true
+          tags: |
+            ${{ env.IMAGE_DB }}:${{ github.sha }}
+            ${{ env.IMAGE_DB }}:develop
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
   # =========================
   # 4) JOB DB : vérification base de données
@@ -155,18 +161,18 @@ jobs:
   db-check:
     name: Database CI
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
 
-    # On lance un conteneur PostgreSQL dédié pour la CI
     services:
       postgres:
         image: postgres:16
         env:
           POSTGRES_USER: collector_user
-          POSTGRES_PASSWORD: SuperSecretP@ssw0rd2025!
+          POSTGRES_PASSWORD: ${{ secrets.DB_PASSWORD }}
           POSTGRES_DB: collector_db
         ports:
           - 5432:5432
-        # On ajoute un healthcheck pour attendre que Postgres soit prêt
         options: >-
           --health-cmd="pg_isready -U collector_user -d collector_db"
           --health-interval=10s
@@ -174,20 +180,17 @@ jobs:
           --health-retries=5
 
     steps:
-      # 1. Récupérer le code du repo
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2. Installer le client psql pour pouvoir parler à Postgres
       - name: Install psql client
         run: |
           sudo apt-get update
           sudo apt-get install -y postgresql-client
 
-      # 3. Attendre que la base soit bien prête
       - name: Wait for database to be ready
         env:
-          PGPASSWORD: SuperSecretP@ssw0rd2025!
+          PGPASSWORD: ${{ secrets.DB_PASSWORD }}
         run: |
           for i in {1..10}; do
             pg_isready -h localhost -p 5432 -d collector_db -U collector_user && break
@@ -195,21 +198,19 @@ jobs:
             sleep 3
           done
 
-      # 4. Exécuter docker/init.sql si le fichier existe (création tables, données, etc.)
       - name: Apply init.sql (if exists)
         env:
-          PGPASSWORD: SuperSecretP@ssw0rd2025!
+          PGPASSWORD: ${{ secrets.DB_PASSWORD }}
         run: |
-          if [ -f docker/init.sql ]; then
-            echo "Found docker/init.sql, applying it..."
-            psql -h localhost -p 5432 -U collector_user -d collector_db -f docker/init.sql
+          if [ -f docker/postgres/init.sql ]; then
+            echo "Found docker/postgres/init.sql, applying it..."
+            psql -h localhost -p 5432 -U collector_user -d collector_db -f docker/postgres/init.sql
           else
-            echo "No docker/init.sql file, skipping schema init"
+            echo "No docker/postgres/init.sql file, skipping schema init"
           fi
 
-      # 5. Faire une requête simple pour vérifier que la DB répond
       - name: Run simple smoke query
         env:
-          PGPASSWORD: SuperSecretP@ssw0rd2025!
+          PGPASSWORD: ${{ secrets.DB_PASSWORD }}
         run: |
           psql -h localhost -p 5432 -U collector_user -d collector_db -c "SELECT 1;"
