--- a/backend/.env.example
+++ b/backend/.env.example
@@ -16,3 +16,6 @@ AUTH0_MGMT_CLIENT_SECRET=xxxxxxxxxxxxxxxxxxxxxxxxxx
 AUTH0_MGMT_AUDIENCE=https://your-tenant.us.auth0.com/api/v2/
 
 CONTENT_CHECK_URL=https://api.example.com/content-check
+
+# FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=https://your-frontend-url.io/
