[ADD] Update environment variables for frontend and docker-compose; remove obsolete frontend .env.example

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -3,3 +3,9 @@ DB_PASSWORD=xxxxxxxxxxxxxxxxx
 DB_NAME=xxxxxxxxxxxxxxxxx
 PGADMIN_EMAIL=xxxxxxxxxxxxxxxxx
 PGADMIN_PASSWORD=xxxxxxxxxxxxxxxxx
+
+# Frontend environment variables
+VITE_AUTH0_DOMAIN=xxxxxxxxxxxxxxxxx
+VITE_AUTH0_CLIENT_ID=xxxxxxxxxxxxxxxxx
+VITE_AUTH0_AUDIENCE=xxxxxxxxxxxxxxxxx
+VITE_API_URL=xxxxxxxxxxxxxxxxx
