--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts"
   },
   "keywords": [],
@@ -22,8 +22,7 @@
     "kafkajs": "^2.2.4",
     "morgan": "^1.10.1",
     "pg": "^8.16.3",
-    "zod": "^4.3.5"
-    ,
+    "zod": "^4.3.5",
     "axios": "^1.6.0"
   },
   "devDependencies": {
