--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,16 @@ jobs:
       run:
         working-directory: backend
 
+    # ✅ Env "dummy" pour éviter les erreurs Zod si ton backend valide les env au démarrage
+    env:
+      AUTH0_DOMAIN: "dummy.auth0.com"
+      AUTH0_AUDIENCE: "dummy-audience"
+      AUTH0_MGMT_CLIENT_ID: "dummy"
+      AUTH0_MGMT_CLIENT_SECRET: "dummy"
+      AUTH0_MGMT_AUDIENCE: "dummy"
+      CONTENT_CHECK_URL: "http://localhost"
+      FRONTEND_URL: "http://localhost"
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -37,6 +47,9 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+
+      - name: Backend unit tests (Jest)
+        run: npm test
 
       - name: Lint (si le script existe - n'empêche pas la CI)
         run: npm run lint --if-present
@@ -58,6 +71,13 @@ jobs:
       run:
         working-directory: frontend
 
+    # ✅ Env VITE_* pour que import.meta.env.VITE_* ne soit pas undefined pendant les tests
+    env:
+      VITE_API_URL: "http://localhost:4000"
+      VITE_AUTH0_DOMAIN: "dummy.auth0.com"
+      VITE_AUTH0_CLIENT_ID: "dummy"
+      VITE_AUTH0_AUDIENCE: "dummy"
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -71,6 +91,9 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+
+      - name: Frontend unit tests (Vitest run)
+        run: npm run test:run --if-present
 
       - name: Lint (si le script existe - n'empêche pas la CI)
         run: npm run lint --if-present
@@ -87,7 +110,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: [backend, frontend]
 
-    # Push uniquement sur push (pas sur PR)
     if: github.event_name == 'push' && github.ref == 'refs/heads/develop'
 
     permissions:
@@ -102,10 +124,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v3
-
       - name: Login to GHCR
         uses: docker/login-action@v3
         with:
@@ -113,7 +133,6 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # -------- BACKEND --------
       - name: Build & push backend
         uses: docker/build-push-action@v6
         with:
@@ -139,7 +158,6 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      # -------- FRONTEND (VITE_* au build) --------
       - name: Build & push frontend (with VITE build args)
         uses: docker/build-push-action@v6
         with:
@@ -156,7 +174,6 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      # -------- DB (postgres + init.sql) --------
       - name: Build & push db (postgres seeded)
         uses: docker/build-push-action@v6
         with:
@@ -196,12 +213,10 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
       - name: Install psql client
         run: |
           sudo apt-get update
           sudo apt-get install -y postgresql-client
-
       - name: Wait for database to be ready
         env:
           PGPASSWORD: ${{ secrets.DB_PASSWORD }}
@@ -211,7 +226,6 @@ jobs:
             echo "Database not ready yet, waiting..."
             sleep 3
           done
-
       - name: Apply init.sql (if exists)
         env:
           PGPASSWORD: ${{ secrets.DB_PASSWORD }}
@@ -222,7 +236,6 @@ jobs:
           else
             echo "No docker/postgres/init.sql file, skipping schema init"
           fi
-
       - name: Run simple smoke query
         env:
           PGPASSWORD: ${{ secrets.DB_PASSWORD }}
