--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,9 +44,8 @@ jobs:
           node-version: 20
           cache: npm
           cache-dependency-path: backend/package-lock.json
-
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --include=dev
 
       - name: Backend unit tests (Jest)
         run: npm test
@@ -90,7 +89,7 @@ jobs:
           cache-dependency-path: frontend/package-lock.json
 
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --include=dev
 
       - name: Frontend unit tests (Vitest run)
         run: npm run test:run --if-present
