--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,8 @@ jobs:
       run:
         working-directory: backend
 
-    # ✅ Env "dummy" pour éviter les erreurs Zod si ton backend valide les env au démarrage
     env:
+      # Dummy env to avoid Zod env validation crashes in CI
       AUTH0_DOMAIN: "dummy.auth0.com"
       AUTH0_AUDIENCE: "dummy-audience"
       AUTH0_MGMT_CLIENT_ID: "dummy"
@@ -33,6 +33,11 @@ jobs:
       AUTH0_MGMT_AUDIENCE: "dummy"
       CONTENT_CHECK_URL: "http://localhost"
       FRONTEND_URL: "http://localhost"
+
+      # Force install devDependencies in CI (fix "jest: not found")
+      NODE_ENV: "development"
+      npm_config_production: "false"
+      npm_config_omit: ""
 
     steps:
       - name: Checkout repository
@@ -44,11 +49,12 @@ jobs:
           node-version: 20
           cache: npm
           cache-dependency-path: backend/package-lock.json
-      - name: Install dependencies
+
+      - name: Install dependencies (include devDependencies)
         run: npm ci --include=dev
 
       - name: Backend unit tests (Jest)
-        run: npm test
+        run: npx --no-install jest
 
       - name: Lint (si le script existe - n'empêche pas la CI)
         run: npm run lint --if-present
@@ -70,12 +76,17 @@ jobs:
       run:
         working-directory: frontend
 
-    # ✅ Env VITE_* pour que import.meta.env.VITE_* ne soit pas undefined pendant les tests
     env:
+      # Dummy VITE_* so import.meta.env is not undefined in tests
       VITE_API_URL: "http://localhost:4000"
       VITE_AUTH0_DOMAIN: "dummy.auth0.com"
       VITE_AUTH0_CLIENT_ID: "dummy"
       VITE_AUTH0_AUDIENCE: "dummy"
+
+      # Force install devDependencies in CI (fix "vitest: not found")
+      NODE_ENV: "development"
+      npm_config_production: "false"
+      npm_config_omit: ""
 
     steps:
       - name: Checkout repository
@@ -88,11 +99,11 @@ jobs:
           cache: npm
           cache-dependency-path: frontend/package-lock.json
 
-      - name: Install dependencies
+      - name: Install dependencies (include devDependencies)
         run: npm ci --include=dev
 
       - name: Frontend unit tests (Vitest run)
-        run: npm run test:run --if-present
+        run: npx --no-install vitest run
 
       - name: Lint (si le script existe - n'empêche pas la CI)
         run: npm run lint --if-present
@@ -109,6 +120,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [backend, frontend]
 
+    # Push uniquement sur push (pas sur PR)
     if: github.event_name == 'push' && github.ref == 'refs/heads/develop'
 
     permissions:
@@ -123,8 +135,10 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v3
+
       - name: Login to GHCR
         uses: docker/login-action@v3
         with:
@@ -132,6 +146,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      # -------- BACKEND --------
       - name: Build & push backend
         uses: docker/build-push-action@v6
         with:
@@ -157,6 +172,7 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
+      # -------- FRONTEND (VITE_* au build) --------
       - name: Build & push frontend (with VITE build args)
         uses: docker/build-push-action@v6
         with:
@@ -173,6 +189,7 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
+      # -------- DB (postgres + init.sql) --------
       - name: Build & push db (postgres seeded)
         uses: docker/build-push-action@v6
         with:
@@ -212,10 +229,12 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
       - name: Install psql client
         run: |
           sudo apt-get update
           sudo apt-get install -y postgresql-client
+
       - name: Wait for database to be ready
         env:
           PGPASSWORD: ${{ secrets.DB_PASSWORD }}
@@ -225,6 +244,7 @@ jobs:
             echo "Database not ready yet, waiting..."
             sleep 3
           done
+
       - name: Apply init.sql (if exists)
         env:
           PGPASSWORD: ${{ secrets.DB_PASSWORD }}
@@ -235,6 +255,7 @@ jobs:
           else
             echo "No docker/postgres/init.sql file, skipping schema init"
           fi
+
       - name: Run simple smoke query
         env:
           PGPASSWORD: ${{ secrets.DB_PASSWORD }}
