--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,10 +34,8 @@ jobs:
       CONTENT_CHECK_URL: "http://localhost"
       FRONTEND_URL: "http://localhost"
 
-      # Ensure devDependencies are installed
-      NODE_ENV: "development"
-      npm_config_production: "false"
-      npm_config_omit: ""
+      # Force npm to install devDependencies
+      NPM_CONFIG_PRODUCTION: "false"
 
     steps:
       - name: Checkout repository
@@ -50,8 +48,11 @@ jobs:
           cache: npm
           cache-dependency-path: backend/package-lock.json
 
-      - name: Install dependencies (include devDependencies)
-        run: npm ci --include=dev
+      - name: Install dependencies (WITH devDependencies)
+        run: |
+          npm ci --include=dev --omit=optional
+          npm ls --depth=0 || true
+          npx --yes jest --version
 
       - name: Backend unit tests (Jest)
         run: npm test
@@ -83,10 +84,8 @@ jobs:
       VITE_AUTH0_CLIENT_ID: "dummy"
       VITE_AUTH0_AUDIENCE: "dummy"
 
-      # Ensure devDependencies are installed
-      NODE_ENV: "development"
-      npm_config_production: "false"
-      npm_config_omit: ""
+      # Force npm to install devDependencies
+      NPM_CONFIG_PRODUCTION: "false"
 
     steps:
       - name: Checkout repository
@@ -99,8 +98,11 @@ jobs:
           cache: npm
           cache-dependency-path: frontend/package-lock.json
 
-      - name: Install dependencies (include devDependencies)
-        run: npm ci --include=dev
+      - name: Install dependencies (WITH devDependencies)
+        run: |
+          npm ci --include=dev --omit=optional
+          npm ls --depth=0 || true
+          npx --yes vitest --version
 
       - name: Frontend unit tests (Vitest run)
         run: npm run test:run --if-present
@@ -120,7 +122,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: [backend, frontend]
 
-    # Push uniquement sur push (pas sur PR)
     if: github.event_name == 'push' && github.ref == 'refs/heads/develop'
 
     permissions:
@@ -146,7 +147,6 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # -------- BACKEND --------
       - name: Build & push backend
         uses: docker/build-push-action@v6
         with:
@@ -172,7 +172,6 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      # -------- FRONTEND (VITE_* au build) --------
       - name: Build & push frontend (with VITE build args)
         uses: docker/build-push-action@v6
         with:
@@ -189,7 +188,6 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      # -------- DB (postgres + init.sql) --------
       - name: Build & push db (postgres seeded)
         uses: docker/build-push-action@v6
         with:
