--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,9 +34,6 @@ jobs:
       CONTENT_CHECK_URL: "http://localhost"
       FRONTEND_URL: "http://localhost"
 
-      # Force npm to install devDependencies
-      NPM_CONFIG_PRODUCTION: "false"
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -50,12 +47,14 @@ jobs:
 
       - name: Install dependencies (WITH devDependencies)
         run: |
-          npm ci --include=dev --omit=optional
-          npm ls --depth=0 || true
-          npx --yes jest --version
+          npm ci --include=dev
+          echo "==== node_modules/.bin (backend) ===="
+          ls -la node_modules/.bin || true
 
       - name: Backend unit tests (Jest)
-        run: npm test
+        run: |
+          ./node_modules/.bin/jest --version
+          ./node_modules/.bin/jest
 
       - name: Lint (si le script existe - n'empêche pas la CI)
         run: npm run lint --if-present
@@ -84,9 +83,6 @@ jobs:
       VITE_AUTH0_CLIENT_ID: "dummy"
       VITE_AUTH0_AUDIENCE: "dummy"
 
-      # Force npm to install devDependencies
-      NPM_CONFIG_PRODUCTION: "false"
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -100,12 +96,14 @@ jobs:
 
       - name: Install dependencies (WITH devDependencies)
         run: |
-          npm ci --include=dev --omit=optional
-          npm ls --depth=0 || true
-          npx --yes vitest --version
+          npm ci --include=dev
+          echo "==== node_modules/.bin (frontend) ===="
+          ls -la node_modules/.bin || true
 
       - name: Frontend unit tests (Vitest run)
-        run: npm run test:run --if-present
+        run: |
+          ./node_modules/.bin/vitest --version
+          ./node_modules/.bin/vitest run
 
       - name: Lint (si le script existe - n'empêche pas la CI)
         run: npm run lint --if-present
