--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,13 +26,13 @@ jobs:
 
     env:
       # Dummy env to avoid Zod env validation crashes in CI
-      AUTH0_DOMAIN: "dummy.auth0.com"
-      AUTH0_AUDIENCE: "dummy-audience"
-      AUTH0_MGMT_CLIENT_ID: "dummy"
-      AUTH0_MGMT_CLIENT_SECRET: "dummy"
-      AUTH0_MGMT_AUDIENCE: "dummy"
-      CONTENT_CHECK_URL: "http://localhost"
-      FRONTEND_URL: "http://localhost"
+      AUTH0_DOMAIN: ${{ secrets.AUTH0_DOMAIN }}
+      AUTH0_AUDIENCE: ${{ secrets.AUTH0_AUDIENCE }}
+      AUTH0_MGMT_CLIENT_ID: ${{ secrets.AUTH0_MGMT_CLIENT_ID }}
+      AUTH0_MGMT_CLIENT_SECRET: ${{ secrets.AUTH0_MGMT_CLIENT_SECRET }}
+      AUTH0_MGMT_AUDIENCE: ${{ secrets.AUTH0_MGMT_AUDIENCE }}
+      CONTENT_CHECK_URL: ${{ vars.CONTENT_CHECK_URL }}
+      FRONTEND_URL: ${{ vars.FRONTEND_URL }}
 
       # Force devDependencies install in CI
       NODE_ENV: "development"
@@ -78,10 +78,10 @@ jobs:
 
     env:
       # Dummy VITE_* so import.meta.env is not undefined in tests
-      VITE_API_URL: "http://localhost:4000"
-      VITE_AUTH0_DOMAIN: "dummy.auth0.com"
-      VITE_AUTH0_CLIENT_ID: "dummy"
-      VITE_AUTH0_AUDIENCE: "dummy"
+      VITE_API_URL: ${{ vars.VITE_API_URL }}
+      VITE_AUTH0_DOMAIN: ${{ secrets.VITE_AUTH0_DOMAIN }}
+      VITE_AUTH0_CLIENT_ID: ${{ secrets.VITE_AUTH0_CLIENT_ID }}
+      VITE_AUTH0_AUDIENCE: ${{ secrets.VITE_AUTH0_AUDIENCE }}
 
       # Force devDependencies install in CI
       NODE_ENV: "development"
